# muninn

./: .env.example  .gitignore  CLAUDE.md  MUNINN.MD  README.md  SPEC.md  domain_policy.yml  pyproject.toml  rawspec.md  schema.sql
containers/synthesis/: CLAUDE.md  Dockerfile
containers/synthesis/scripts/: check-status.sh  entrypoint.sh  workspace-init.sh
docs/: SAGA_ARCHITECTURE.MD  SAGA_INSIGHTS_1.MD  SAGA_INSIGHTS_2.MD  SAGA_SETUP.MD  huginn-spec.md  muninn-decisions.md  muninn-roadmap.md  note-SKILL.md  skald-protocol.md
schemas/json/: ad-hoc-analysis.schema.json  deep-pass.schema.json  era-narrative.schema.json  task-input.schema.json
scripts/: init-db.py  launch-synthesis.sh  reconcile-vector-index.py  skald_lint.py
src/muninn/: __init__.py  config.py  db.py  models.py
src/muninn/consumers/: __init__.py
src/muninn/enrich/: __init__.py  haiku.py  idempotency.py  pipeline.py
src/muninn/ingest/: __init__.py  bookmarks_html.py  pipeline.py
src/muninn/sanitize/: __init__.py  rules.py  tokens.py  url.py
src/muninn/scrape/: __init__.py  at_capture.py  client.py  (+8 more)
tests/: conftest.py
tests/fixtures/: bookmarks.html  bookmarks_redaction.html
tests/integration/: test_consumers_cli.py  test_dual_pass_scrape.py  test_duckdb_roundtrip.py  test_ingest.py  test_mcp.py  test_parquet.py  test_pipeline_idempotent.py  test_synthesis_validation.py  test_timeline.py  test_vault.py
tests/unit/: test_config_env.py  test_domain_policy.py  test_embed.py  test_idempotency.py  test_sanitize_tokens.py  test_sanitize_url.py  test_scrape_selection.py  test_skald_lint.py
(+29 files in other folders)
