[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muninn"
version = "0.1.0"
description = "Personal knowledge base from a decade of bookmarks — ingest, scrape, enrich, synthesize, expose."
requires-python = ">=3.12"
dependencies = [
    # Core
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    # Scrape
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "selectolax>=0.3",
    # Enrich
    "anthropic>=0.52",
    "qdrant-client>=1.13",
    # Synthesis
    "jsonschema>=4.21",
    # Consumers
    "jinja2>=3.1",
    "mcp>=1.0",
    "pyarrow>=15.0",
]

[project.scripts]
muninn = "muninn.consumers.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pandas>=2.2",
]
# Local semantic embeddings (EmbeddingGemma via sentence-transformers).
# Heavy (pulls torch) — required for real indexing/search; the pipeline
# runs without it using MUNINN_EMBEDDING_BACKEND=hash (tests, offline).
embeddings = [
    "sentence-transformers>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/muninn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
